examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: website
    meta.helm.sh/release-namespace: develop
  labels:
    app.kubernetes.io/managed-by: Helm
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - image: moon:latest
        imagePullPolicy: Always
        name: readiness-website
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1900Mi
          requests:
            cpu: 50m
            memory: 50Mi
      restartPolicy: Always
