examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: website
    meta.helm.sh/release-namespace: develop
  labels:
    app.kubernetes.io/managed-by: Helm
  name: website
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 3000
    targetPort: 3000
    protocole: tcp
  selector:
    app: website
